--- a/Fetch-N-Store/Fetch-N-Store/Views/Shared/_Layout.cshtml
+++ b/Fetch-N-Store/Fetch-N-Store/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body ng-app="FetchNStore">
+<body ng-app="FetchNStore" ng-controller="RequestCtrl">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
