--- a/Fetch-N-Store/Fetch-N-Store/Views/Shared/_Layout.cshtml
+++ b/Fetch-N-Store/Fetch-N-Store/Views/Shared/_Layout.cshtml
@@ -2,13 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=" viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/angular")
+
+
+
 
 </head>
-<body ng-app="FetchNStore" ng-controller="RequestCtrl">
+<body ng-app="FetchNStore" >
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -39,7 +43,6 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/angular")
     @RenderSection("scripts", required: false)
 </body>
 </html>
